fix: csv writer may writing comma instead of a dot for floats